--- a/for-paper-authors/ipdps26_ad_ae_template.tex
+++ b/for-paper-authors/ipdps26_ad_ae_template.tex
@@ -9,7 +9,7 @@
 \usepackage{booktabs}
 \usepackage{tagging}
 
-\usepackage{sc24repro}
+\usepackage{ipdps26repro}
 
 % Uncomment/comment the following usetag lines 
 % if you would like to get an explanation or an example.
